inicio sesion sin mejora grafica

--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -24,7 +24,9 @@ jdbcRealm.dataSource = $dataSource
 jdbcRealm.authenticationQuery = SELECT password FROM usuario WHERE correo = ?
 jdbcRealm.userRolesQuery = SELECT name FROM roll WHERE id = (SELECT roll FROM usuario WHERE correo = ?)
 
+authc = org.apache.shiro.web.filter.authc.PassThruAuthenticationFilter
 authc.loginUrl = /faces/inicio.xhtml
+
 
 passwordMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
 credentialsMatcher = org.apache.shiro.authc.credential.HashedCredentialsMatcher
