--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -22,7 +22,7 @@ jdbcRealm.dataSource = $dataSource
 
 
 jdbcRealm.authenticationQuery = SELECT password FROM usuario WHERE correo = ?
-jdbcRealm.userRolesQuery = SELECT name FROM roll WHERE id = (SELECT roll FROM usuario WHERE correo = ?)
+jdbcRealm.userRolesQuery = SELECT nombre FROM roll WHERE id = (SELECT rol FROM usuario WHERE correo = ?)
 
 authc = org.apache.shiro.web.filter.authc.PassThruAuthenticationFilter
 authc.loginUrl = /faces/index.html
@@ -38,5 +38,7 @@ credentialsMatcher.storedCredentialsHexEncoded = true
 
 [urls]
 /faces/index.html=authc
-/faces/nuevo/login/login.xhtml=authc
+/faces/login/login.xhtml=authc, roles[admin]
+/faces/login/login.xhtml=authc, roles[usuario]
+
 /logout = logout
